--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1>Cat Namer</h1>
                 <p>Name this cat!</p>
                 <div class="imgbox">
-                <img src="cat1.jpg" alt="cat" class="center-fit cat">
+                <img src="images/cat1.jpg" alt="cat" class="center-fit cat">
                 </div> <br>
                 <input id="myInput" placeholder="Enter Name">
                 <button id="myBtn">Submit</button>
