--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
                 <p>Cats Incorporated is a team of three wonderful cats passionate about creating cat-related content. Meowria, Pawla, and Junipurr met at USC (University of Silly Cats) and became best friends. </p>
                 <br>
                 <ul id="aboutlist">
-                    <li><img src="bwcat.jpg" alt="cat" class="aboutcat cat"> <p>CEO: Meowria Smith</p></li>
-                    <li><img src="whitecat.jpg" alt="cat" class="aboutcat cat"><p>COO: Pawla Jones</p></li>
-                    <li><img src="orangecat.jpg" alt="cat" class="aboutcat cat"><p>CFO: Junipurr Doe</p></li>
+                    <li><img src="images/bwcat.jpg" alt="cat" class="aboutcat cat"> <p>CEO: Meowria Smith</p></li>
+                    <li><img src="images/whitecat.jpg" alt="cat" class="aboutcat cat"><p>COO: Pawla Jones</p></li>
+                    <li><img src="images/orangecat.jpg" alt="cat" class="aboutcat cat"><p>CFO: Junipurr Doe</p></li>
                 </ul>
                 <p>Have questions? Contact us at catsincorporated@gmail.com.</p>
             </section>
