--- a/quiz.html
+++ b/quiz.html
@@ -48,7 +48,7 @@
                 <p>What is a group of cats called?</p>
                 <label><input type="radio" name="q4" value="0" id="a4"> Clowder</label><br>
                 <label><input type="radio" name="q4" value="1"> Herd</label><br>
-                <label><input type="radio" name="q4" value="2"> Flock</label>br>
+                <label><input type="radio" name="q4" value="2"> Flock</label><br>
                 <label><input type="radio" name="q4" value="3"> Pack</label>
             </div><br>
             <div class="q">
