--- a/quiz.html
+++ b/quiz.html
@@ -53,10 +53,10 @@
             </div><br>
             <div class="q">
                 <p>How high/far can cats jump?</p>
-                <label><input type="radio" name="q5" value="0"> up to 2 times their length</label><br>
-                <label><input type="radio" name="q5" value="1"> up to 4 times their length</label><br>
-                <label><input type="radio" name="q5" value="2" id="a5"> up to 6 times their length</label><br>
-                <label><input type="radio" name="q5" value="3"> up to 8 times their length</label>
+                <label><input type="radio" name="q5" value="0"> Up to 2 times their length</label><br>
+                <label><input type="radio" name="q5" value="1"> Up to 4 times their length</label><br>
+                <label><input type="radio" name="q5" value="2" id="a5"> Up to 6 times their length</label><br>
+                <label><input type="radio" name="q5" value="3"> Up to 8 times their length</label>
             </div><br>
             <button id="quizbtn" type="button" onclick="checkAnswers()">Submit Answers</button>
             <p id="quizpara">Your score is...</p>
